# scripts

./: .gitignore  README.md  pyproject.toml
src/scripts/: reddit.py
