[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tobias Kolditz", email = "tbs.kldtz@gmail.com" }
]
dependencies = [
    "aiohttp>=3.9.3",
    "typer>=0.12.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
reddit = 'scripts.reddit:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scripts"]
